playground/notas_tests/invalid/blk-02b.hulk
// BlockExpr no es Primary: no puede ser rhs del binding en let x = ...
let x = { print(1); 2 } in print(x);
